--- a/index.html
+++ b/index.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Portfolio</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">My Portfolio</a>
+      <div class="navbar-nav">
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
+      </div>
+    </div>
   </nav>
 
-  <main>
+  <main class="container mt-5">
     <h1>Welcome to My Portfolio</h1>
     <p>This is a simple portfolio website built for my university assignment.</p>
   </main>
 
 </body>
+
 </html>
+
+<footer class="bg-dark text-light mt-5 py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h5>My Portfolio</h5>
+                <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p> 
+            </div>
+
+            <div class="col-md-6 text-md-end">
+                <a href="#" class="text-light me-3">GitHub</a>
+                <a href="#" class="text-light me-3">LinkedIn</a>
+                <a href="#" class="text-light">Email</a>
+            </div>
+        </div>
+    </div>
+</footer>
