styling and further profile page structure

--- a/about.html
+++ b/about.html
@@ -22,78 +22,108 @@
     </div>
   </nav>
 
-  <main class="container mt-5">
-    <header class="mb-4">
-      <h1>Welcome to My Portfolio</h1>
-      <p>This is a simple portfolio website built for my university assignment.</p>
-    </header>
+  <main class="container py-5">
+    <div class="card border-0 shadow-lg rounded-4">
+      <div class="card-body p-5">
 
-    <section class="mb-4">
-      <h2>Background</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. This text can be placeholder content.</p>
-    </section>
+        <header class="mb-4 pb-3 border-bottom">
+          <h1 class="display-5 fw-semibold mb-2">Welcome to My Portfolio</h1>
+          <p class="lead text-secondary mb-3">
+            This is a simple portfolio website built for my university assignment.
+          </p>
+          <div class="d-flex flex-wrap gap-2">
+            <span class="badge rounded-pill text-bg-dark px-3 py-2">HTML</span>
+            <span class="badge rounded-pill text-bg-dark px-3 py-2">CSS</span>
+            <span class="badge rounded-pill text-bg-dark px-3 py-2">Bootstrap</span>
+            <span class="badge rounded-pill text-bg-dark px-3 py-2">Javascript</span>
+          </div>
+        </header>
+        <div class="row g-4">
+          <div class="col-12">
+            
+        <section class="mb-4">
+  <div class="card border-0 bg-white shadow-sm rounded-4">
+    <div class="card-body p-4">
+      <h2 class="h5 mb-3">Contact</h2>
 
-    <section class="mb-4">
-      <h2>Skills</h2>
-
-      <div class="row">
-        <div class="col-md-4">
-          <h6>Frontend</h6>
-          <ul>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-          </ul>
-        </div>
-
-        <div class="col-md-4">
-          <h6>Tools</h6>
-          <ul>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-            <li>Lorem ipsum</li>
-          </ul>
-        </div>
+      <div class="d-grid gap-2">
+        <a class="btn btn-dark btn-lg" href="mailto:example@email.com">Email</a>
+        <a class="btn btn-outline-dark btn-lg" href="#">GitHub</a>
+        <a class="btn btn-outline-dark btn-lg" href="#">LinkedIn</a>
       </div>
-    </section>
-    <section class="mb-4">
-      <h2>Education</h2>
-      <p>
-        Lorem ipsum........
-      </p>
-    </section>
-<section class="mb-4">
-  <h2>Contact</h2>
-  <p>Email: example@email.com</p>
+
+    </div>
+  </div>
 </section>
 
-  </main>
- 
-    <footer class="bg-dark text-light mt-5 py-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h5>My Portfolio</h5>
-            <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
-          </div>
+            <section class="mb-4">
+              <div class="card border-0 bg-white shadow-sm rounded-4">
+                <div class="card-body p-4">
+                  <h2 class="h5 mb-2">Background</h2>
+                  <p class="mb-0 text-secondary">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. This text can be placeholder content.
+                  </p>
+                </div>
+              </div>
+            </section>
 
-          <div class="col-md-6 text-md-end">
-            <a href="#" class="text-light me-3">GitHub</a>
-            <a href="#" class="text-light me-3">LinkedIn</a>
-            <a href="#" class="text-light">Email</a>
+            <section class="mb-4">
+              <h2 class="h4 mb-3">Skills</h2>
+
+              <div class="row">
+                <div class="col-md-6">
+                  <h6 class="text-uppercase text-muted">Frontend</h6>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item px-0">Lorem Ipsum</li>
+                    <li class="list-group-item px-0">Lorem Ipsum</li>
+                    <li class="list-group-item px-0">Lorem Ipsum</li>
+                  </ul>
+                </div>
+
+                <div class="col-md-6">
+                  <h6 class="text-uppercase text-muted">Tools</h6>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item px-0">Lorem Ipsum</li>
+                    <li class="list-group-item px-0">Lorem Ipsum</li>
+                    <li class="list-group-item px-0">Lorem Ipsum</li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+
+            <section class="mb-4">
+              <div class="card border-0 bg-white shadow-sm rounded-4">
+                <div class="card-body p-4">
+                  <h2 class="h5 mb-2">Education</h2>
+                  <p class="mb-0 text-secondary">Lorem ipsum........</p>
+                </div>
+              </div>
+            </section>
           </div>
         </div>
+
       </div>
-    </footer>
-  
+    </div>
+  </main>
+
+  <footer class="bg-dark text-light mt-5 py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h5>My Portfolio</h5>
+          <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
+        </div>
+
+        <div class="col-md-6 text-md-end">
+          <a href="#" class="text-light me-3">GitHub</a>
+          <a href="#" class="text-light me-3">LinkedIn</a>
+          <a href="#" class="text-light">Email</a>
+        </div>
+     
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
