--- a/portfolio.html
+++ b/portfolio.html
@@ -25,17 +25,18 @@
         <header class="mb-4">
             <h1>Portfolio</h1>
             <p class="lead">A selection of projects I have worked on.</p>
+            <div class="accent-line"></div>
         </header>
 
         <section>
-            <div class="row g-3">
+            <div class="row g-5">
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project One">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project One</h3>
+                            <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
                             <p class="card-text">Short description of what this project is.</p>
-                            <a href="#" class="btn btn-primary">View</a>
+                            <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -44,9 +45,9 @@
                     <article class="card h-100">
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project Two</h3>
+                            <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
                             <p class="card-text">Short description of what this project is.</p>
-                            <a href="#" class="btn btn-primary">View</a>
+                            <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -57,7 +58,7 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Short description of what this project is.</p>
-                            <a href="#" class="btn btn-primary">View</a>
+                            <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>    
                 </div>
@@ -68,7 +69,7 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Short description of what this project is.</p>
-                            <a href="#" class="btn btn-primary">View</a>
+                            <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -79,7 +80,7 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Short description of what this project is.</p>
-                            <a href="#" class="btn btn-primary">View</a>
+                            <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -90,10 +91,10 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Two</h3>
                             <p class="card-text">Short description of what this project is.</p>
-                            <a href="#" class="btn btn-primary">View</a>
+                            <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
-                </div
+                </div>
         </section>
     </main>
 </body>
