Improve homepage layout and CTA section

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project One">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
-                            <p class="card-text">Short description of what this project is.</p>
+                            <p class="card-text">I created a plant database in java which allowed users to search and store plant searches.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
@@ -46,7 +46,8 @@
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
-                            <p class="card-text">Short description of what this project is.</p>
+                            <p class="card-text">Created a game where creatures are hidden on a grid and players must guess coordinates to win.</p>
+                            
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
@@ -57,7 +58,7 @@
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
-                            <p class="card-text">Short description of what this project is.</p>
+                            <p class="card-text">Short description of what this project is.Lorem ipsum...</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>    
@@ -68,7 +69,7 @@
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
-                            <p class="card-text">Short description of what this project is.</p>
+                            <p class="card-text">Short description of what this project is. Lorem ipsum...</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
