add stats and featured projects to homepage

--- a/index.html
+++ b/index.html
@@ -99,6 +99,80 @@
       </div>
     </section>
 
+<section class="featured-projects-section my-5">
+  <div class="container">
+    <div class="featured-projects-inner">
+
+      <div class="d-flex align-items-end justify-content-between mb-4">
+        <div>
+          <h2 class="h5 mb-1">Featured Projects</h2>
+          <p class="text-secondary mb-0">
+            A selection of coursework and academic projects developed during my studies.
+          </p>
+        </div>
+        <a class="featured-link" href="portfolio.html">View all →</a>
+      </div>
+
+      <div class="row gx-4 gy-4">
+
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm rounded-4 h-100">
+            <img src="images/projectone.png" class="card-img-top" alt="">
+            <div class="card-body p-4 d-flex flex-column">
+              <h3 class="h6 fw-bold mb-2">Plant Database (JavaScript)</h3>
+              <p class="text-secondary mb-3">
+                A coursework project focused on building a simple database-style application using JavaScript.
+              </p>
+              <div class="d-flex gap-2 flex-wrap mb-3">
+                <span class="badge about-badge">JavaScript</span>
+                <span class="badge about-badge">HTML</span>
+                <span class="badge about-badge">CSS</span>
+              </div>
+              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm rounded-4 h-100">
+            <img src="images/projecttwo.png" class="card-img-top" alt="">
+            <div class="card-body p-4 d-flex flex-column">
+              <h3 class="h6 fw-bold mb-2">ProjectNova Game (JavaScript)</h3>
+              <p class="text-secondary mb-3">
+                An individual project exploring basic game mechanics and interaction using JavaScript.
+              </p>
+              <div class="d-flex gap-2 flex-wrap mb-3">
+                <span class="badge about-badge">JavaScript</span>
+                <span class="badge about-badge">UI</span>
+              </div>
+              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm rounded-4 h-100">
+            <img src="images/projectthree.png" class="card-img-top" alt="">
+            <div class="card-body p-4 d-flex flex-column">
+              <h3 class="h6 fw-bold mb-2">Analytics Dashboard</h3>
+              <p class="text-secondary mb-3">
+                A responsive dashboard layout demonstrating Bootstrap components and custom CSS.
+              </p>
+              <div class="d-flex gap-2 flex-wrap mb-3">
+                <span class="badge about-badge">Bootstrap</span>
+                <span class="badge about-badge">CSS</span>
+              </div>
+              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+
     <section class="mb-4">
       <div class="card border-0 bg-white shadow-sm rounded-4">
         <div class="card-body p-4">
@@ -111,6 +185,43 @@
         </div>
       </div>
     </section>
+
+   <section class="mb-4">
+  <div class="row gx-4 gy-4">
+
+    <div class="col-md-4">
+      <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
+        <div class="card-body p-4">
+          <div class="stat-accent"></div>
+          <div class="stat-number">2+</div>
+          <p class="stat-label">Roles in digital &amp; internal IT</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
+        <div class="card-body p-4">
+          <div class="stat-accent"></div>
+          <div class="stat-number">3</div>
+          <p class="stat-label">Core strengths</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
+        <div class="card-body p-4">
+          <div class="stat-accent"></div>
+          <div class="stat-number">2025</div>
+          <p class="stat-label">Graduate Apprenticeship start</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
     <section class="mb-4">
       <div class="card border-0 bg-white shadow-sm rounded-4 cta-card">
