fix responsive toggle in menu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>My Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/favicon1.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 
@@ -128,7 +129,7 @@
                 <span class="badge about-badge">HTML</span>
                 <span class="badge about-badge">CSS</span>
               </div>
-              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View</a>
+              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
             </div>
           </div>
         </div>
@@ -145,7 +146,7 @@
                 <span class="badge about-badge">JavaScript</span>
                 <span class="badge about-badge">UI</span>
               </div>
-              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View</a>
+              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
             </div>
           </div>
         </div>
@@ -162,7 +163,7 @@
                 <span class="badge about-badge">Bootstrap</span>
                 <span class="badge about-badge">CSS</span>
               </div>
-              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View</a>
+              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
             </div>
           </div>
         </div>
@@ -174,7 +175,7 @@
 
 
     <section class="mb-4">
-      <div class="card border-0 bg-white shadow-sm rounded-4">
+      <div class="card border-0 bg-white shadow-sm rounded-4 experience-card">
         <div class="card-body p-4">
           <h2 class="h5 mb-2">Experience Snapshot</h2>
           <p class="text-secondary mb-0">
@@ -222,21 +223,16 @@
   </div>
 </section>
 
+<section class="mt-5">
+  <div class="container">
+    <div class="d-flex justify-content-end align-items-center border-top pt-4">
+      <a href="portfolio.html" class="btn btn-outline-purple">
+        View Portfolio →
+      </a>
+    </div>
+  </div>
+</section>
 
-    <section class="mb-4">
-      <div class="card border-0 bg-white shadow-sm rounded-4 cta-card">
-        <div class="card-body p-4 d-flex flex-column flex-md-row align-items-md-center justify-content-between gap-3">
-          <div>
-            <h2 class="h5 mb-1">Want to see my work?</h2>
-            <p class="text-secondary mb-0">Explore my projects and how I approach problem-solving and delivery.</p>
-          </div>
-          <div class="d-flex flex-wrap gap-2">
-            <a class="btn btn-purple" href="portfolio.html">View Projects</a>
-            <a class="btn btn-outline-purple" href="about.html">Learn More</a>
-          </div>
-        </div>
-      </div>
-    </section>
 
   </main>
 
