--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <title>About - My Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/favicon1.png" type="image/png">
 </head>
 
 <body>
@@ -14,24 +15,42 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">My Portfolio</a>
-      <div class="navbar-nav">
-        <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link active" aria-current="page" href="about.html">About</a>
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="about.html">About</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </div>
       </div>
     </div>
   </nav>
+
 
   <main class="container py-5">
     <div class="card border-0 shadow-lg rounded-4">
       <div class="card-body p-5">
 
         <header class="mb-4 pb-3 border-bottom">
-          <h1 class="display-5 fw-semibold mb-2">About Me</h1>
-          <p class="lead text-secondary mb-3">
-            This is a simple portfolio website built for my university assignment.
-          </p>
+          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-between gap-3">
+            <div>
+              <h1 class="display-5 fw-semibold mb-2">About Me</h1>
+              <p class="lead text-secondary mb-0">
+                This is a simple portfolio website built for my university assignment.
+              </p>
+            </div>
+
+            <a class="btn btn-outline-purple" href="files/Ellie_Robson_CV.pdf" download>
+              Download CV
+            </a>
+          </div>
         </header>
+
         <div class="p-4 mb-4 rounded-4 border bg-white">
           <div class="row g-3 align-items-center">
             <div class="col-md-auto text-center">
@@ -73,6 +92,33 @@
                 </div>
               </div>
             </section>
+
+
+            <div class="card border-0 shadow-sm rounded-4 mb-4">
+              <div class="card-body p-4">
+                <h2 class="h6 mb-3">At a Glance</h2>
+                <ul class="list-unstyled mb-0 small">
+                  <li><strong>Degree:</strong> IT Management for Business</li>
+                  <li><strong>University:</strong> University of Dundee</li>
+                  <li><strong>Role:</strong> Graduate Apprentice</li>
+                  <li><strong>Focus:</strong> IT &amp; Business Alignment</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="card border-0 shadow-sm rounded-4 mb-4">
+              <div class="card-body p-4">
+                <h2 class="h6 mb-3">Currently Learning</h2>
+                <ul class="mb-0 small">
+                  <li>JavaScript fundamentals</li>
+                  <li>Responsive design with Bootstrap</li>
+                  <li>Git &amp; GitHub workflows</li>
+                  <li>Accessibility best practices</li>
+                </ul>
+              </div>
+            </div>
+
+
           </div>
           <div class="col-lg-8">
 
@@ -143,30 +189,43 @@
               </div>
             </section>
 
-          <section class="mb-4">
-  <div class="card border-0 bg-white shadow-sm rounded-4">
-    <div class="card-body p-4">
-      <h2 class="h5 mb-3">Education</h2>
+            <section class="mb-4">
+              <div class="card border-0 bg-white shadow-sm rounded-4">
+                <div class="card-body p-4">
+                  <h2 class="h5 mb-3">Education</h2>
 
-      <div class="edu-item">
-        <div class="edu-date">September 2025 – Present</div>
-        <div class="edu-content">
-          <h3 class="edu-title">Graduate Apprenticeship – IT Management for Business</h3>
-          <div class="edu-school text-secondary">University of Dundee</div>
-          <p class="edu-desc text-secondary mb-0">
-            Combining academic learning with workplace delivery, focusing on aligning IT solutions
-            with business goals, systems improvement, and professional development.
-          </p>
-        </div>
-      </div>
+                  <div class="edu-item">
+                    <div class="edu-date">September 2025 – Present</div>
+                    <div class="edu-content">
+                      <h3 class="edu-title">Graduate Apprenticeship – IT Management for Business</h3>
+                      <div class="edu-school text-secondary">University of Dundee</div>
+                      <p class="edu-desc text-secondary mb-0">
+                        Combining academic learning with workplace delivery, focusing on aligning IT solutions
+                        with business goals, systems improvement, and professional development.
+                      </p>
+                    </div>
+                  </div>
 
-      <div class="edu-item">
-        <div class="edu-date">June 2020 – March 2020</div>
-        <div class="edu-content">
-          <h3 class="edu-title">Diploma Digital Application Support SCQF level 6</h3>
-          <div class="edu-school text-secondary">QA Apprenticeships</div>
-          <p class="edu-desc text-secondary mb-0">
-            Focused on developing practical skills in digital applications to support real world business context.
+                  <div class="edu-item">
+                    <div class="edu-date">June 2020 – March 2020</div>
+                    <div class="edu-content">
+                      <h3 class="edu-title">Diploma Digital Application Support SCQF level 6</h3>
+                      <div class="edu-school text-secondary">QA Apprenticeships</div>
+                      <p class="edu-desc text-secondary mb-0">
+                        Focused on developing practical skills in digital applications to support real world business
+                        context.
+                      </p>
+                    </div>
+                  </div>
+
+            </section>
+
+<section class="mt-5">
+  <div class="d-flex justify-content-between align-items-center border-top pt-4">
+    <a href="portfolio.html" class="text-decoration-none fw-semibold">← View Portfolio</a>
+    <a href="index.html" class="btn btn-outline-purple">Back to Home →</a>
+  </div>
+</section>
 
   </main>
 
@@ -182,12 +241,14 @@
           <a href="#" class="text-light me-3">GitHub</a>
           <a href="#" class="text-light me-3">LinkedIn</a>
           <a href="#" class="text-light">Email</a>
+
+
         </div>
 
       </div>
     </div>
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
