--- a/portfolio.html
+++ b/portfolio.html
@@ -7,19 +7,28 @@
     <title>Portfolio - My Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/favicon1.png" type="image/png">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">My Portfolio</a>
-            <div class="navbar-nav">
-                <a class="nav-link" href="index.html">Home</a>
-                <a class="nav-link" href="about.html">About</a>
-                <a class="nav-link active" aria-current="page" href="portfolio.html">Portfolio</a>
-            </div>
-        </div>
-    </nav>
+  <div class="container">
+    <a class="navbar-brand" href="index.html">My Portfolio</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+      aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="mainNav">
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link active" aria-current="page" href="portfolio.html">Portfolio</a>
+      </div>
+    </div>
+  </div>
+</nav>
 
     <main class="container mt-5">
         <header class="mb-4">
@@ -35,7 +44,8 @@
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project One">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
-                            <p class="card-text">I created a plant database in java which allowed users to search and store plant searches.</p>
+                            <p class="card-text">I created a plant database in java which allowed users to search and
+                                store plant searches.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
@@ -46,8 +56,9 @@
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
-                            <p class="card-text">Created a game where creatures are hidden on a grid and players must guess coordinates to win.</p>
-                            
+                            <p class="card-text">Created a game where creatures are hidden on a grid and players must
+                                guess coordinates to win.</p>
+
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
@@ -61,7 +72,7 @@
                             <p class="card-text">Short description of what this project is.Lorem ipsum...</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
-                    </article>    
+                    </article>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
@@ -86,7 +97,7 @@
                     </article>
                 </div>
 
-                 <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
@@ -97,22 +108,41 @@
                     </article>
                 </div>
         </section>
-    </main>
-</body>
-</html>
-<footer class="bg-dark text-light mt-5 py-4">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h5>My Portfolio</h5>
-                <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p> 
-            </div>
 
-            <div class="col-md-6 text-md-end">
-                <a href="#" class="text-light me-3">GitHub</a>
-                <a href="#" class="text-light me-3">LinkedIn</a>
-                <a href="#" class="text-light">Email</a>
+
+        <section class="mt-5">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-center border-top pt-4">
+
+                    <a href="index.html" class="text-decoration-none fw-semibold">
+                        ← Back to Home
+                    </a>
+
+                    <a href="about.html" class="btn btn-outline-purple">
+                        About Me →
+                    </a>
+
+                </div>
             </div>
-        </div>
-    </div>
-</footer>
+        </section>
+
+    </main>
+    <footer class="bg-dark text-light mt-5 py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>My Portfolio</h5>
+                    <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
+                </div>
+
+                <div class="col-md-6 text-md-end">
+                    <a href="#" class="text-light me-3">GitHub</a>
+                    <a href="#" class="text-light me-3">LinkedIn</a>
+                    <a href="#" class="text-light">Email</a>
+                </div>
+            </div>
+             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
+ 
