--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
-                            <p class="card-text">Short description of what this project is.Lorem ipsum...</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
@@ -80,7 +80,7 @@
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
-                            <p class="card-text">Short description of what this project is. Lorem ipsum...</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
@@ -91,7 +91,7 @@
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
-                            <p class="card-text">Short description of what this project is.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
@@ -102,7 +102,7 @@
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Two</h3>
-                            <p class="card-text">Short description of what this project is.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
