--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
-                        <img src="images/ProjectTwo.png" class="card-img-top" alt="Screenshot of Project Two">
+                        <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
                             <p class="card-text">Created a game where creatures are hidden on a grid and players must
@@ -66,7 +66,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
-                        <img src="images/ProjectThree.png" class="card-img-top" alt="Screenshot of Project Three">
+                        <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -77,7 +77,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
-                        <img src="images/ProjectThree.png" class="card-img-top" alt="Screenshot of Project Three">
+                        <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -88,7 +88,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
-                        <img src="images/ProjectOne.png" class="card-img-top" alt="Screenshot of Project Three">
+                        <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -99,7 +99,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
-                        <img src="images/ProjectTwo.png" class="card-img-top" alt="Screenshot of Project Two">
+                        <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Two</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
