--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm rounded-4 h-100">
-            <img src="images/projectone.png" class="card-img-top" alt=">
+            <img src="images/projectone.png" class="card-img-top" alt="Plant database JavaScript project preview">
             <div class="card-body p-4 d-flex flex-column">
               <h3 class="h6 fw-bold mb-2">Plant Database (JavaScript)</h3>
               <p class="text-secondary mb-3">
@@ -136,7 +136,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm rounded-4 h-100">
-            <img src="images/projecttwo.png" class="card-img-top" alt=">
+            <img src="images/projecttwo.png" class="card-img-top" alt="ProjectNova game preview">
             <div class="card-body p-4 d-flex flex-column">
               <h3 class="h6 fw-bold mb-2">ProjectNova Game (JavaScript)</h3>
               <p class="text-secondary mb-3">
@@ -153,7 +153,7 @@
 
         <div class="col-md-4">
           <div class="card border-0 shadow-sm rounded-4 h-100">
-            <img src="images/projectthree.png" class="card-img-top" alt=">
+            <img src="images/projectthree.png" class="card-img-top" alt="Analytics dashboard project preview">
             <div class="card-body p-4 d-flex flex-column">
               <h3 class="h6 fw-bold mb-2">Analytics Dashboard</h3>
               <p class="text-secondary mb-3">
