--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
             <div class="row g-5">
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="card h-100">
-                        <img src="images/ProjectOne.png" class="card-img-top" alt="Screenshot of Project One">
+                        <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project One">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
                             <p class="card-text">I created a plant database in java which allowed users to search and
